[package]
name = "rdb"
version = "0.3.0"
authors = ["Jan-Erik Rediger <badboy@fnordig.de>"]

edition = "2018"

keywords = ["redis", "database"]
description = "Fast and efficient RDB parsing utility"

readme = "README.md"
license = "MIT"

homepage = "http://rdb.fnordig.de/"
documentation = "http://rdb.fnordig.de/doc/rdb/"
repository = "https://github.com/badboy/rdb-rs"

include = [
  "Cargo.toml",
  "README*",
  "LICENSE*",
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
]

[[bin]]
name = "rdb"
path = "src/main.rs"
doc  = false

[dependencies]
lzf = "0.3"
getopts = "0.2"
rustc-serialize = "0.3"
regex = "1"
byteorder = "1"
serde = "1"
serde_json = "1.0.53"
hex = "0.4.2"
indicatif = "0.14.0"
